--- a/index.html
+++ b/index.html
@@ -1,34 +1,12 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>Vimal Arul Francis</h1>
-    <h2>I'm a Web Developer</h2>
-    <hr />
-    <h3><a href="./assets/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking" />
-    <h3><a href="./assets/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite" />
-    <hr />
-    <a href="./assets/about.html">About Me</a>
-    <a href="./assets/contact.html">Contact Me</a>
+    <div class="main-container"> 
+      <h1>Hi!!</h1>
+    </div>
   </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
